finalise ranking rework

--- a/assets/views/blocks/pagination.jet.html
+++ b/assets/views/blocks/pagination.jet.html
@@ -4,7 +4,7 @@
     <div class="d-flex flex-column align-items-center justify-content-center">
         <!-- Pagination dropdown -->
         <div class="dropup mb-3">
-        <button class="btn btn-secondary fw-bold rounded-pill dropdown-toggle py-2" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+        <button class="custom-btn-secondary bg-charcoal-surface2 dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
             Go to Page
         </button>
         <ul class="dropdown-menu">
