ranking noscript UX

--- a/assets/css/bootstrap-style.css
+++ b/assets/css/bootstrap-style.css
@@ -12250,4 +12250,10 @@ h6, .h6 {
   display: inline;
 }
 
+@media (scripting: none) {
+  .js-required {
+    display: none !important;
+  }
+}
+
 /*# sourceMappingURL=bootstrap-style.css.map */
