--- a/assets/views/settings.jet.html
+++ b/assets/views/settings.jet.html
@@ -107,8 +107,7 @@
         <input id="app-b" type="radio" name="app" value="button" />
         <label for="app-b">
           Button
-          <small>Add a button at the bottom-right of the thumbnails and open the previewer when you click into
-            it</small>
+          <small>Add a button at the bottom-right of the thumbnails and open the previewer when you click into it</small>
         </label>
         <br />
         <input id="app-d" type="radio" name="app" value="disable" />
